# MLX8-W3-Transformers

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
.charles/: .env.example  README.md  braille_per_epoch.sh  braille_utils.py  encoder_decode_models.py  encoder_decoder_models.py  encoder_only_models.py  gpu-setup.sh  inference.py  models.py  sample_image.blob  sweep_config_encoder_decoder.yaml  sweep_config_encoder_only.yaml  viz.py  wandb_run_sweep.py  wandb_sweeper.py  wandb_utils.py
.charles/data/: clone-mnist.sh  duckdb-sql.md
.charles/visualizations/: encoder_decoder_braille_output.html
.james/: best_model.pth  data_processing.py  eval.py  model.py  readme.md  train.py
.james/eval_results/: evaluation_results.json
.james/models/: vit.py
.james/utils/: wandb_utils.py
.james/wandb/: latest-run
.james/wandb/run-20250624_141845-r0cmqlld/: run-r0cmqlld.wandb
.james/wandb/run-20250624_141845-r0cmqlld/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.james/wandb/run-20250624_151236-dxqunafm/: run-dxqunafm.wandb
.james/wandb/run-20250624_151236-dxqunafm/files/: config.yaml  wandb-metadata.json
.james/wandb/run-20250624_151241-5jm8key0/: run-5jm8key0.wandb
.james/wandb/run-20250624_151241-5jm8key0/files/: config.yaml  (+1 more)
.james/wandb/run-20250624_151247-vlnntd07/: run-vlnntd07.wandb
.james/wandb/run-20250624_152041-5xuxkscf/: run-5xuxkscf.wandb
.james/wandb/run-20250624_152046-lryubwkw/: run-lryubwkw.wandb
.james/wandb/run-20250624_152809-3oupc6ny/: run-3oupc6ny.wandb
.james/wandb/run-20250624_153314-trl8wtld/: run-trl8wtld.wandb
.james/wandb/run-20250624_153654-vy9diomp/: run-vy9diomp.wandb
.james/wandb/run-20250624_153802-dfrqzo9g/: run-dfrqzo9g.wandb
.james/wandb/run-20250624_154444-f80eh16m/: run-f80eh16m.wandb
.james/wandb/run-20250624_154739-68s9djjz/: run-68s9djjz.wandb
.james/wandb/run-20250624_155240-c2h2iixd/: run-c2h2iixd.wandb
.james/wandb/run-20250624_155748-bkkobmse/: run-bkkobmse.wandb
.james/wandb/run-20250624_155906-8cfqpf4c/: run-8cfqpf4c.wandb
.james/wandb/sweep-3xc9532z/: config-68s9djjz.yaml  config-8cfqpf4c.yaml  config-bkkobmse.yaml  config-c2h2iixd.yaml  config-dfrqzo9g.yaml  config-f80eh16m.yaml  config-vy9diomp.yaml
.james/wandb/sweep-5sjt835s/: config-trl8wtld.yaml
.james/wandb/sweep-rm12uwpf/: config-3oupc6ny.yaml  config-5jm8key0.yaml  config-5xuxkscf.yaml  config-dxqunafm.yaml  config-i7u04kc2.yaml  config-lryubwkw.yaml  config-plytp4kp.yaml  config-vlnntd07.yaml
course-materials/: README_course_uv.md  README_uv.md  bes-shared-code.py
scripts/: setup-env.sh
(+44 files in other folders)
